--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   firebase_auth: 
   firebase_core:
+  sms_autofill: ^1.2.6
 
 dev_dependencies:
   flutter_test:
