--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_core:
   sms_autofill: ^1.2.6
   flutter_svg: 0.19.1
+  image_picker: 0.6.3
 
 dev_dependencies:
   flutter_test:
