--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sms_autofill: ^1.2.6
   flutter_svg: 0.19.1
   image_picker: 0.6.3
+  google_fonts:
 
 dev_dependencies:
   flutter_test:
