--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_svg: 0.19.1
   image_picker: 0.6.3
   google_fonts:
+  permission_handler: ^5.0.0
+  contacts_service: ^0.3.10
 
 dev_dependencies:
   flutter_test:
